--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,24 @@
 ------------------------------------------------------------
+User: burnett  Thu Mar  3 20:22:38 PST 2005
+flux/xml
+
+Modified Files:
+	source_library.xml 
+Log Message:
+remove Earth.
+
+    *
+------------------------------------------------------------
+User: burnett  Thu Mar  3 20:22:37 PST 2005
+flux/doc
+
+Modified Files:
+	release.notes 
+Log Message:
+remove Earth.
+
+    *
+------------------------------------------------------------
 User: burnett  Thu Mar  3 20:22:37 PST 2005
 flux/cmt
 
