This commit was manufactured by cvs2svn to create tag 'v8r36'.
Sprout from master 2007-09-06 19:50:14 UTC heather 'prepare to tag'
Cherrypick from GLAST 2007-09-06 19:50:16 UTC heather 'AutoUpdate':
    .cvsignore
    ChangeLog
    cmt/.cvsignore
    cmt/Makefile
    doc/.cvsignore
    doc/Doxyfile
    doc/FluxSvcDoc2.htm
    doc/FluxSvcFig1.jpg
    doc/FluxSvcFig2.jpg
    flux/FluxException.h
    flux/SpectrumFactoryTable.h
    src/SpectrumFactoryTable.cxx
    src/rootplot/rootAngleHist.h
    src/rootplot/test/roottest.cxx
    xml/FluxSvcParams.dtd
    xml/FluxSvcParams.xml
Delete:
    sources/GRS01369.txt
    sources/pulsars.txt
    sources/vela.txt

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,22 @@
 ------------------------------------------------------------
+User: heather  Thu Sep  6 12:50:14 PDT 2007
+flux/doc
+
+Modified Files:
+	release.notes 
+Log Message:
+prepare to tag
+    *
+------------------------------------------------------------
+User: heather  Thu Sep  6 12:50:14 PDT 2007
+flux/cmt
+
+Modified Files:
+	requirements 
+Log Message:
+prepare to tag
+    *
+------------------------------------------------------------
 User: heather  Thu Sep  6 12:48:06 PDT 2007
 flux/xml
 
