--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,31 @@
 ------------------------------------------------------------
+User: jrb  Thu Dec 17 15:22:04 PST 2009
+flux/cmt
+
+Modified Files:
+	requirements 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jrb  Thu Dec 17 15:22:04 PST 2009
+flux/doc
+
+Modified Files:
+	release.notes 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jrb  Thu Dec 17 15:22:04 PST 2009
+flux
+
+Modified Files:
+	SConscript 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
 User: elwinter  Wed Dec 16 14:41:05 PST 2009
 flux/src/rootplot
 
