--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,31 @@
 ------------------------------------------------------------
+User: jrb  Sat Jun 12 15:43:36 PDT 2010
+flux/cmt
+
+Modified Files:
+	requirements 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jrb  Sat Jun 12 15:43:36 PDT 2010
+flux/doc
+
+Modified Files:
+	release.notes 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jrb  Sat Jun 12 15:43:36 PDT 2010
+flux
+
+Modified Files:
+	SConscript 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
 User: jrb  Thu Jun 10 17:45:07 PDT 2010
 GlastRelease-scons/flux
 
