--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,31 @@
 ------------------------------------------------------------
+User: jrb  Fri Aug 17 17:08:57 PDT 2012
+flux/cmt
+
+Modified Files:
+	requirements 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jrb  Fri Aug 17 17:08:57 PDT 2012
+flux/doc
+
+Modified Files:
+	release.notes 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jrb  Fri Aug 17 17:08:57 PDT 2012
+flux
+
+Modified Files:
+	SConscript 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
 TAG
 Tag name: GlastRelease-20-04-02, operation: add
 Package: flux
