--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,31 @@
 ------------------------------------------------------------
+User: jchiang  Wed Oct  9 15:39:59 PDT 2013
+flux/cmt
+
+Modified Files:
+	requirements 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jchiang  Wed Oct  9 15:39:59 PDT 2013
+flux/doc
+
+Modified Files:
+	release.notes 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jchiang  Wed Oct  9 15:39:59 PDT 2013
+flux
+
+Modified Files:
+	SConscript 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
 User: jchiang  Wed Oct  9 15:39:36 PDT 2013
 ScienceTools-scons/flux/src
 
