--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,31 @@
 ------------------------------------------------------------
+User: jchiang  Fri Jan 16 17:51:37 PST 2015
+flux/cmt
+
+Modified Files:
+	requirements 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jchiang  Fri Jan 16 17:51:37 PST 2015
+flux/doc
+
+Modified Files:
+	release.notes 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
+User: jchiang  Fri Jan 16 17:51:37 PST 2015
+flux
+
+Modified Files:
+	SConscript 
+Log Message:
+stag/GoGui_auto-tag
+    *
+------------------------------------------------------------
 User: jchiang  Fri Jan 16 17:46:12 PST 2015
 ScienceTools-scons/flux/xml
 
